# claude-aoc

./: README.md  pyproject.toml
.claude/commands/: aoc.md
aoc/: display.py  helpers.py  http.py  types.py
aoc/puzzles/year2016/day01/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day02/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day03/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day04/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day05/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day06/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day07/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day08/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day09/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day10/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day11/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day12/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day13/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day14/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day15/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day16/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day17/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day18/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day19/: part1.py  part2.py  puzzle.md
aoc/puzzles/year2016/day20/: part1.py  part2.py  puzzle.md
puzzles/2016/day01/: part1.py  part2.py  puzzle.md
src/aoc/: __init__.py  cli.py  helpers.py  http.py
tests/: conftest.py
tests/puzzles/: test_2016_day01.py  test_2016_day02.py  test_2016_day03.py  test_2016_day04.py  test_2016_day05.py  test_2016_day06.py  test_2016_day07.py  test_2016_day08.py  test_2016_day09.py  test_2016_day10.py  test_2016_day11.py  test_2016_day12.py  test_2016_day13.py  test_2016_day14.py  test_2016_day15.py  test_2016_day16.py  test_2016_day17.py  test_2016_day18.py  test_2016_day19.py  test_2016_day20.py
