[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aoc"
version = "0.1.0"
description = "Advent of Code solver with Claude Code integration"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "markdownify>=0.14.1",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "types-requests>=2.32.0.20241016",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # Core Python errors & style
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "C90",    # mccabe complexity
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PERF",   # performance
    "FURB",   # refurb modernization
    "ERA",    # eradicate (commented-out code)
    "I",      # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "D",      # pydocstyle
    "ANN",    # flake8-annotations
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "RSE",    # flake8-raise
    "A",      # flake8-builtins
    "DTZ",    # flake8-datetimez
    "PTH",    # flake8-use-pathlib
    "G",      # flake8-logging-format
    "PT",     # flake8-pytest-style
    "RUF",    # Ruff rules
]
ignore = [
    "ANN401",  # Dynamically typed expressions (Any) allowed
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D203",    # 1 blank line required before class docstring (conflicts with D211)
    "D213",    # Multi-line docstring summary should start at the second line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN", "S101"]  # Tests don't need docstrings/annotations, allow assert

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
